after playing around with the css for a while, got it to a point where it looks somewhat decent on desktop. need to fix how it looks on mobile

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -1,14 +1,12 @@
 .container {
-  max-width: 600px;
-
-  /* max-height: ; */
+  /* max-width: 600px; */
   margin: 0 auto;
 }
 
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin: 1rem 0;
+  width: 100%;
 }
 
 .col-full {
@@ -19,12 +17,12 @@
   width: 50%;
 }
 
-.col-75 {
-  width: 75%;
-}
-
 @media screen and (min-width: 768px) {
   input {
     width: 400px;
+  }
+
+  .categories {
+    width: 300px;
   }
 }
